--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ body {
 }
 
 .square,
-.colorForm input[type="text"] {
+.colorForm input[type="text"],
+.colorForm button {
   border-radius: 0.625rem;
   border-color: #000;
   font-size: 1.25rem;
@@ -75,6 +76,5 @@ body {
   font-size: 1rem;
   font-weight: 600;
   padding: 0.25rem;
-  border-radius: 10px;
   cursor: pointer;
 }
